Started working on the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <html>
 
-<body>
-    <script src="index.js"></script>
-    <h1> Ugyen Zangmo</h1>
-</body>
+<head>
+
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <meta charset = "UTF-8">
+    <META name="description" content="Portfolio">
+    <title> Portfolio Ugyen Zangmo</title>
+
+</head>
+
+    <body>
+        <script src="index.js"></script>
+        <h1> 
+        
+        <div class="title">
+
+           <div class="names">
+                <div class = name> Ugyen </div>
+                <div class = name> Zangmo </div>
+           </div> 
+
+           <div class="uni"> UNB </div>  
+
+        </div>
+
+        </h1>
+        <hr/>
+    </body>
+
 </html>
