added logo and linked to home page

--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
         <script src="index.js"></script>
         <h1> 
         
-        <div class="title">
+            <div class="title">
 
-           <div class="names">
-                <div class = name> Ugyen </div>
-                <div class = name> Zangmo </div>
-           </div> 
-
-           <div class="uni"> UNB </div>  
-
-        </div>
+                <div class="names">
+                    <div class = name> Ugyen </div>
+                    <div class = name> Zangmo </div>
+                </div> 
+                <div class="uni"> UNB </div> 
+            </div>
+            <p class="course">Bachelors of Science in Software Engineering, Diploma in Technology Management and Entrepreneurship</p>
 
         </h1>
+
         <hr/>
+
+        <div class="picture">
+            <a href="index.html">
+                <img height="100%" width="100%" src="./images/logo-nobg.png">
+            </a>
+        </div>
     </body>
 
 </html>
