added drop down

--- a/index.html
+++ b/index.html
@@ -32,6 +32,42 @@
                 <img height="100%" width="100%" src="./images/logo-nobg.png">
             </a>
         </div>
+
+        <!-- <ul>
+            <li><a href="default.asp">Resume</a></li>
+            <li><a href="news.asp">Personal Projects</a></li>
+            <li><a href="contact.asp">Notes</a></li>
+            <li><a href="about.asp">Hobbies</a></li>
+
+        </ul> -->
+
+        <ul class="list">
+            <li class="item-1">
+                <div class="dropdown">
+                    <a href="resume.html">
+                        <button class="drop-btn">Resume</button>
+                   </a> 
+                </div>   
+            </li>
+           
+            <li class="item-2">
+                <div class="dropdown">
+                    <button class="drop-btn">Personal Projects</button>
+                    <div class="drop-content">
+                        <a href="game1.com">Game 1</a>
+                        <a href="game2.com">Game 2</a>
+                    </div>
+
+                </div>
+            </li>
+            
+
+
+
+
+
+
+        </ul>
     </body>
 
 </html>
