--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="item-1">
                 <div class="dropdown">
                     <a href="resume.html">
-                        <button class="drop-btn">Resume</button>
+                        <button class="drop-btn" onclick="window.open('file:./coop_resume_winter23.pdf'); return true;"> Resume </button>
                    </a> 
                 </div>   
             </li>
