Started group project page with javascript

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <html>
-
 <head>
-
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset = "UTF-8">
     <META name="description" content="Portfolio">
     <title> Portfolio Ugyen Zangmo</title>
-
 </head>
 
     <body>
-        <script src="index.js"></script>
         <h1> 
         
             <div class="title">
@@ -24,7 +20,6 @@
             <p class="course">Bachelors of Science in Software Engineering, Diploma in Technology Management and Entrepreneurship</p>
 
         </h1>
-
         <hr/>
 
         <div class="picture">
@@ -32,14 +27,6 @@
                 <img height="100%" width="100%" src="./images/logo-nobg.png">
             </a>
         </div>
-
-        <!-- <ul>
-            <li><a href="default.asp">Resume</a></li>
-            <li><a href="news.asp">Personal Projects</a></li>
-            <li><a href="contact.asp">Notes</a></li>
-            <li><a href="about.asp">Hobbies</a></li>
-
-        </ul> -->
 
         <ul class="list">
             <li class="item-1">
@@ -60,14 +47,16 @@
 
                 </div>
             </li>
-            
 
-
-
-
-
-
+            <li class="item-3">
+                <div class="dropdown">
+                    <a href="groupproject.html" class="drop-btn" role="button" style="text-decoration:none">
+                        Group Projects
+                    </a>
+                </div>
+            </li>
         </ul>
+
     </body>
 
 </html>
