made the images scrollable in group projects

--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
            
             <li class="item-2">
                 <div class="dropdown">
-                    <button class="drop-btn">Personal Projects</button>
-                    <div class="drop-content">
-                        <a href="game1.com">Game 1</a>
-                        <a href="game2.com">Game 2</a>
-                    </div>
-
+                    <button class="drop-btn">Personal Github Link</button>
                 </div>
             </li>
 
@@ -53,6 +48,17 @@
                     <a href="groupproject.html" class="drop-btn" role="button" style="text-decoration:none">
                         Group Projects
                     </a>
+                </div>
+            </li>
+
+            <li class="item-4">
+                <div class="dropdown">
+                    <button class="drop-btn">Hobbies</button>
+                    <div class="drop-content">
+                        <a href="game1.com">Plants</a>
+                        <a href="game2.com">Music</a>
+                    </div>
+
                 </div>
             </li>
         </ul>
